# satswarm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TECHNICAL_DEBT.md
.github/workflows/: ci.yml
docs/api/: README.md
docs/guides/: quickstart.md
examples/simple-agent/: README.md  main.rs
src/: lib.rs
src/decomposition/: mod.rs
src/marketplace/: mod.rs
src/observability/: mod.rs
src/payments/: mod.rs
src/privacy/: mod.rs
src/relay/: mod.rs
src/reputation/: mod.rs
tests/: integration_tests.rs
